--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+.mvn
+.gitattributes
+.gitignore
+mvnw
+mvnw.cmd
 
 ### STS ###
 .apt_generated
